Configure environment variables with OpenRouter API and Telegram Bot

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,28 @@
-# Database
+# PASEKA IT CRM - Environment Variables
+
+# Database (PostgreSQL connection string)
+# Для локальной разработки:
 DATABASE_URL="postgresql://user:password@localhost:5432/paseka_crm"
+# Для production (Vercel/Supabase/Railway):
+# DATABASE_URL="postgresql://user:password@host:5432/dbname"
 
-# JWT Secret (generate with: openssl rand -base64 32)
-JWT_SECRET="your-secret-key-here"
+# JWT Secret (сгенерируйте случайную строку 32+ символов)
+# Генерация: openssl rand -base64 32
+JWT_SECRET="your-secret-key-here-change-in-production"
 
-# OpenRouter API
-OPENROUTER_API_KEY="your-openrouter-api-key"
+# OpenRouter API (для AI функций: декомпозиция задач, анализ рисков, резюме проектов)
+# Получить ключ: https://openrouter.ai/keys
+OPENROUTER_API_KEY="sk-or-v1-your-key-here"
 
-# Telegram Bot
-TELEGRAM_BOT_TOKEN="your-telegram-bot-token"
+# Telegram Bot Token (для уведомлений пользователям)
+# Создать бота: https://t.me/BotFather
+TELEGRAM_BOT_TOKEN="your-bot-token-here"
 
-# App URL
+# App URL (обновите после деплоя)
+# Локально:
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
+# Production:
+# NEXT_PUBLIC_APP_URL="https://your-app.vercel.app"
 
 # File Upload (optional - for S3)
 # AWS_ACCESS_KEY_ID=""
