--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-  "buildCommand": "prisma generate && npm run build",
-  "crons": [
-    {
-      "path": "/api/cron/archive-tasks",
-      "schedule": "0 */6 * * *"
-    }
-  ]
+  "buildCommand": "prisma generate && next build"
 }
